testsuite/poke.pkl/cdiv-integers-diag-1.pk
/* { dg-do compile } */

var x = 10 /^ 0; /* { dg-error "division by zero" } */
